# TD5RE

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  REFACTOR_PLAN.md  hookspec.yaml  td5re.ini  td5re_release.ini  td5re_update.ps1  update.bat  winlibs_dl.txt
.claude/: settings.json  statusline.sh
.github/: pull_request_template.md
_cleanup_2026-05-28/: Config.td5
asi_patcher/: build.bat  check_shims.cmd  clean_shims.cmd  generate_winmm_def.py  install.bat  remove_hklm_shim_ADMIN.cmd  run_no_shims.ps1
docs/: ARCHITECTURE_ASSET_PIPELINE.md  ARCHITECTURE_FRONTEND.md  ARCHITECTURE_NETPLAY.md  ARCHITECTURE_PHYSICS.md  ARCHITECTURE_RENDER_FLOW.md  ARCHITECTURE_SAVE_SYSTEM.md  frida_differential_capture_usage.md
re/: RE_STATUS.md  TD5_MODDING_GUIDE.md  track_car_ids.md
scripts/: DecompSoundFunctions.java  DecompTrafficAudio.java  ExportAllDecomp.java  analyze_tick59_collision.py  capture_snapshot_pool.py  decomp_sound_traffic.py  decomp_three_funcs.py  decomp_wheel_funcs.py  deploy_release.sh  frida_differential_capture.py  frida_pool.sh  gen_codemap.py  gen_module_table.ps1  ghidra_pool.sh  lint_structure.ps1  lint_structure_baseline.json  make_release_manifest.ps1  pending_viewer.bat  pending_viewer.py  selftest.ps1  td5_mod.ini  ttd_record.ps1  ttd_record_port.py  ttd_record_quickrace.py  verify_wave2_sweep.py  worktree_setup.ps1  wrapper_stale_check.ps1
td5_ddraw/: WINDOWED_RECIPE.md  build.bat  generate_def.py  install.bat
td5mod/: CMakeLists.txt  Makefile  README.md  build.bat  install.bat
td5mod/ddraw_wrapper/: build.bat  ddraw.def  wrapper_cflags.txt  wrapper_srcs.txt
td5mod/ddraw_wrapper/src/: d3d11_backend.c  d3d11_backend_device.c  d3d11_backend_draw.c  d3d11_backend_pipeline.c  d3d3.c  ddraw4.c  ddraw_main.c  device3.c  png_loader.c  surface4.c  td5_wrapper_backend.h  td5_wrapper_ddraw_types.h  td5_wrapper_objects.h  texture2.c  viewport3.c  wrapper.h
td5mod/ddraw_wrapper/src/shaders/: compile_shaders.bat  ps_arrow.hlsl  ps_arrow_bytes.h  ps_common.hlsli  ps_composite.hlsl  ps_composite_bytes.h  ps_cursor.hlsl  ps_cursor_bytes.h  ps_decal.hlsl  ps_decal_bytes.h  ps_fx_decal.hlsl  ps_fx_decal_bytes.h  ps_fx_glow.hlsl  ps_fx_glow_bytes.h  ps_fx_rain.hlsl  ps_fx_rain_bytes.h  ps_fx_smoke.hlsl  ps_fx_smoke_bytes.h  ps_gauge.hlsl  ps_gauge_bytes.h  ps_light.hlsl  ps_light_bytes.h  ps_luminance_alpha.hlsl  ps_luminance_alpha_bytes.h  ps_modulate.hlsl  ps_modulate_alpha.hlsl  ps_modulate_alpha_bytes.h  ps_modulate_alpha_g.hlsl  ps_modulate_alpha_g_bytes.h  ps_modulate_bytes.h  ps_modulate_g.hlsl  ps_modulate_g_bytes.h  ps_msdf.hlsl  ps_msdf_bytes.h  ps_roundrect.hlsl  ps_roundrect_bytes.h  ps_shadow.hlsl  ps_shadow_bytes.h  ps_ssr.hlsl  ps_ssr_bytes.h  (+4 more)
td5mod/ref/: td5_gdi_text.c
td5mod/ref/decomp/: README.txt  frontend_screens_batch1.txt
td5mod/src/: td5_asset_dump.c  td5_asset_dump.h  td5_gamemodes.c  td5_gamemodes.h  td5_log.h  td5_mod.c  td5_png_replace.c  td5_png_replace.h  td5_sdk.h  td5_tuning.c  td5_tuning.h
td5mod/src/td5re/: CMakeLists.txt  EXPECTED_BEHAVIOR.md  FRONTEND_SCREEN_GUIDE.md  GARAGE_DECAL_EDITOR_PLAN.md  LIGHTING_REWORK_PLAN.md  QUICKRACE_PLAYER_SETUP.md  README.md  STRUCTURE_ROADMAP.md  build_all.bat  build_standalone.bat  cflags.txt  link_libs.txt  main.c  pending_to_test.csv  render_goldens.txt  srcs.txt  td5_ai.c  td5_ai.h  td5_ai_internal.h  td5_ai_traffic.c  td5_arcade.c  td5_arcade.h  td5_asset.c  td5_asset.h  td5_assetsrc.c  td5_assetsrc.h  td5_backend_capture.h  td5_benchmark.c  td5_benchmark.h  td5_bytes.h  td5_camera.c  td5_camera.h  td5_camera_profiles.h  td5_carparam.h  td5_changelog.h  td5_color.h  td5_config.c  td5_config.h  td5_control.c  td5_control.h  (+184 more)
td5mod/src/td5re/inputscripts/: full_controls_demo.txt  navigate_game_options.txt  navigate_race_options.txt  uiguide_modal_probe.txt
td5mod/td6_compat/: build.bat  drmclien.def  drmclien_stub.c  strmdll.def  strmdll_stub.c  wmaudsdk.def  wmaudsdk_stub.c
tools/: diff_profiles.py  diff_race.py  diff_replay_frames.py  diff_traffic_compare.py  frida_ai_probe.js  frida_cascade_probe.js  (+8 more)
(+1082 files in other folders)
